# machine_learning_training

./: .gitignore  README.md
discrete_math/: README.md  pyproject.toml
linear_regression/predict_federal_reserve_interest_rates/: README.md  environment.yaml  predict_federal_reserve_interest_rates_notebook.ipynb  pyproject.toml
linear_regression/predict_federal_reserve_interest_rates/predict_federal_reserve_interest_rates/data/fed/: bank_prime_rate.csv
linear_regression/predict_federal_reserve_interest_rates/predict_federal_reserve_interest_rates/data/kaggle/: kaggle_federal_reserve_interest_rates.csv
linear_regression/predict_federal_reserve_interest_rates/predict_federal_reserve_interest_rates/data/treasury/: real-long-term-rates-2000-2010.csv  real-long-term-rates-2000-2021.csv  real-long-term-rates-2011-2020.csv
linear_regression/predict_federal_reserve_interest_rates/predict_federal_reserve_interest_rates/data/wsj/: s_and_p_500_historical_prices.csv
linear_regression/predict_federal_reserve_interest_rates/predict_federal_reserve_interest_rates/util/: date.py
linear_regression/predict_federal_reserve_interest_rates/test/data/bls/: bls_cpi.txt
linear_regression/predict_federal_reserve_interest_rates/test/data/fed/: bank_prime_rate.csv
linear_regression/predict_federal_reserve_interest_rates/test/util/: test_date.py
supervised/regression/linear_regression/predict_federal_reserve_interest_rates/: cpi_index_vs_federal_funds_rate.ipynb  environment.yaml  predict_federal_reserve_interest_rates_notebook.ipynb  pyproject.toml  whitepaper.md
(+69 files in other folders)
