[tool.poetry]
name = "predict_federal_reserve_interest_rates"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <johnson.larry.l@fintorian.com>"]

[tool.poetry.dependencies]
pandas = "^1.4.4"
python = "^3.9"

[tool.poetry.dev-dependencies]
hypothesis = "^6.54.4"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"